--- a/css/style.css
+++ b/css/style.css
@@ -483,6 +483,15 @@ h4.highlight {
     color: #eee
 }
 
+.highlight-3 {
+    margin-bottom: 0;
+    margin-top: 15px;
+}
+
+h4.highlight-3 {
+    margin-bottom: 15px;
+}
+
 ::-moz-selection {
     color: #eee
 }
@@ -715,6 +724,10 @@ body.fadeOut {
 .logo a {
     display: inline-block;
     padding-left: 0
+}
+
+.logo img {
+    height: 32px;
 }
 
 .container {
@@ -1525,7 +1538,13 @@ body.filters-open .intro {
 .filter-nav li {
     padding: 0;
     list-style: none;
+    text-align: center;
     margin-bottom: 9px
+}
+
+.filter-nav li img {
+    width:240px;
+    opacity: 0.78;
 }
 
 .filter-nav li a {
