--- a/css/landing.css
+++ b/css/landing.css
@@ -795,7 +795,7 @@ img {
     top: 0;
     left: 0;
     right: 0;
-    height:100vh;
+    height:100%;
     bottom: 180px;
     position: absolute
 }
