--- a/css/main.css
+++ b/css/main.css
@@ -17947,7 +17947,7 @@ body .page-template-template-service .service--description, body .page-template-
     padding: 0 8vw 0 0
 }
 
-    body .page-template-template-service .service--description p, body .page-template-template-csr .service--description p {
+    body .page-template-template-service .service--description p, body .page-template-template-service .service--description .p, body .page-template-template-csr .service--description p {
         text-align: left;
         font-size: 26px;
         line-height: 46px;
@@ -17955,7 +17955,7 @@ body .page-template-template-service .service--description, body .page-template-
     }
 
 @media (min-width:1800px) {
-    body .page-template-template-service .service--description p, body .page-template-template-csr .service--description p {
+    body .page-template-template-service .service--description p, body .page-template-template-service .service--description .p, body .page-template-template-csr .service--description p {
         font-size: 1.56vw;
         line-height: 2.75vw;
         margin-bottom: 3vw
@@ -17963,7 +17963,7 @@ body .page-template-template-service .service--description, body .page-template-
 }
 
 @media (max-width:1300px) {
-    body .page-template-template-service .service--description p, body .page-template-template-csr .service--description p {
+    body .page-template-template-service .service--description p, body .page-template-template-service .service--description .p, body .page-template-template-csr .service--description p {
         font-size: 22px;
         line-height: 39px;
         margin-bottom: 40px
@@ -17971,7 +17971,7 @@ body .page-template-template-service .service--description, body .page-template-
 }
 
 @media (max-height:800px) {
-    body .page-template-template-service .service--description p, body .page-template-template-csr .service--description p {
+    body .page-template-template-service .service--description p, body .page-template-template-service .service--description .p, body .page-template-template-csr .service--description p {
         font-size: 18px;
         line-height: 38px;
         margin-bottom: 50px
@@ -17979,7 +17979,7 @@ body .page-template-template-service .service--description, body .page-template-
 }
 
 @media (max-width:992px) {
-    body .page-template-template-service .service--description p, body .page-template-template-csr .service--description p {
+    body .page-template-template-service .service--description p, body .page-template-template-service .service--description .p, body .page-template-template-csr .service--description p {
         font-size: 18px;
         line-height: 28px;
         margin-bottom: 40px
@@ -17987,7 +17987,7 @@ body .page-template-template-service .service--description, body .page-template-
 }
 
 @media (max-width:767px) {
-    body .page-template-template-service .service--description p, body .page-template-template-csr .service--description p {
+    body .page-template-template-service .service--description p, body .page-template-template-service .service--description .p, body .page-template-template-csr .service--description p {
         font-size: 16px;
         line-height: 28px
     }
